# Aoi

./: .gitgnore  .gitignore  .replit.bk  README.md  main.py  pyproject.toml  server.py  start.sh
commands/: verify.py
data/: commands.json  gbans.json  gbans.txt  globals.json  guilds.json  stickers.py  vips.py
