[tool.poetry]
name = "konoha"
version = "1.0.0"
description = ""
authors = ["Hiroshi Deco <decodeco.7000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
