[tool.poetry]
name = "konoha"
version = "1.0.0"
description = ""
authors = ["Hiroshi Deco <decodeco.7000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
"discord.py" = "^1.6.0"
pya3rt = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
